gcc/testsuite/gm2/switches/uninit-variable-checking/pass/tiny.mod
MODULE tiny ;


PROCEDURE test ;
VAR
   p: CARDINAL ;
BEGIN
   p := 1
END test ;

BEGIN
   test
END tiny.
