gcc/testsuite/gm2/switches/uninit-variable-checking/fail/testvarinit.mod
MODULE testvarinit ;


PROCEDURE test ;
VAR
   x: CARDINAL ;
BEGIN
   (* x := 1 ; *)
   IF x = 1
   THEN
   END
END test ;


BEGIN
   test
END testvarinit.
